tests/NormalTests/paczka1/small_fuzzy/76739872.err
Error in line 1: FNF1PAmncD1 A851 20,3
Error in line 9: goGmmfrG A851 53,7
